--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,18 +4,25 @@
   "proxy": "http://localhost:5000",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.12.4",
+    "@chakra-ui/icons": "^2.0.11",
+    "@chakra-ui/react": "^2.3.7",
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
     "@reduxjs/toolkit": "^1.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
-    "material-table": "^2.0.3",
+    "bootstrap": "^4.6.0",
+    "framer-motion": "^4.1.17",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.6.0",
+    "react-table": "^7.8.0",
     "react-toastify": "^9.1.1",
     "web-vitals": "^2.1.4"
   },
